<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.abhishek.courtcounter.MainActivity">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="Team A"
                android:fontFamily="sans-serif-medium"
                android:textSize="14sp"
                android:textColor="#616161"/>

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="24dp"
                android:text="0"
                android:fontFamily="sans-serif-light"
                android:textSize="56sp"
                android:textColor="#000000"
                />

            <Button
                android:id="@+id/PlusthreeTeamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="plusThreeA"
                android:text="Team A +3 POINTS" />

            <Button
                android:id="@+id/PlustwoTeamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:onClick="plusTwoA"
                android:text="Team A +2 POINTS" />

            <Button
                android:id="@+id/FreeThrowTeamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="freeThrowA"
                android:text="Team A FREE THROW" />
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="16dp"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="Team B"
                android:fontFamily="sans-serif-medium"
                android:textSize="14sp"
                android:textColor="#616161"/>

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="24dp"
                android:text="0"
                android:fontFamily="sans-serif-light"
                android:textSize="56sp"
                android:textColor="#000000"
                />

            <Button
                android:id="@+id/PlusthreeTeamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:onClick="plusThreeB"
                android:text="Team B +3 POINTS" />

            <Button
                android:id="@+id/PlustwoTeamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:onClick="plusTwoB"
                android:text="Team B +2 POINTS" />

            <Button
                android:id="@+id/FreeThrowTeamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="freeThrowB"
                android:text="Team B FREE THROW" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="Reset"
        android:onClick="resetButton"/>

</RelativeLayout>
</ScrollView>
